fix alignment of submission table (#43)
* fix alignment of submission table

* Update router path

* Update package-lock.json

--- a/src/styles/partials/_adminTable.scss
+++ b/src/styles/partials/_adminTable.scss
@@ -63,8 +63,8 @@
         }
 
         .adminTabletimeDate {
-            padding-left: 1.25rem;
-            text-align: left;
+            padding-right: 2.5rem;
+            text-align: right;
         }
 
         .adminTabletimeDateRight {
